test/errors/borrowcheck/return_local_borrow/main.sk
module Main {

struct Foo {}

fn sink(t: Foo) {}

fn sink2(t: &Foo) {}

fn someFunc(t: &Foo) -> &Foo {
    let local = Foo();
    return &local;
}

fn main() {
    let x = Foo();
    let y = someFunc(&x);
    sink(x);

}

}
